--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ FiPy = "^3.4.4"
 tqdm = "^4.66.1"
 numpy = "^1.26.0"
 h5py = "^3.9.0"
+gmsh = "^4.11.1"
+pandas = "^2.1.1"
+seaborn = "^0.13.0"
+ipykernel = "^6.25.2"
+matplotlib = "^3.8.0"
 
 
 [build-system]
