--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pandas = "^2.1.1"
 seaborn = "^0.13.0"
 ipykernel = "^6.25.2"
 matplotlib = "~3.7"
+jupyterlab = "^4.0.7"
+moviepy = "^1.0.3"
 
 
 [build-system]
