--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ moviepy = "^1.0.3"
 scienceplots = "^2.1.0"
 opencv-python = "^4.8.1.78"
 scikit-learn = "^1.3.2"
+alphashape = "^1.3.1"
 
 
 [build-system]
