--- a/environment.yml
+++ b/environment.yml
@@ -5,3 +5,17 @@ dependencies:
   - python >=3.10, <3.11
   - pip
   - poetry >=1.6, <1.7
+  - FiPy
+  - tqdm
+  - h5py
+  - pandas
+  - seaborn
+  - ipykernel
+  - matplotlib
+  - jupyterlab
+  - moviepy
+  - scienceplots
+  - scikit-learn
+  - pip:
+    - -e .
+    - opencv-python 
